add alt attribute for img tag

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="game">
       <div class="hangman">
         <div class="hang" id="hang">
-          <img src="./assets/hang.svg" class="stand" />
+          <img src="./assets/hang.svg" class="stand" alt="stand" />
         </div>
       </div>
       <div class="inputs-container">
